# moka

./: CMakeLists.txt  README.md
src/lib-controler-gmap/operations/: operations-move-selection.cc
src/lib-controler-gmap/precompile/: precompile-dart.cc  precompile-face.cc
src/lib-corefinement/2d-propagation/: corefine-2d-propagation.cc
src/lib-corefinement/3d/: face-intersection-tools.hh
src/lib-corefinement/common/: corefine-3d-tools.cc
src/lib-extraction-images/: extraction-images.hh  image-3d-magick.hh
src/lib-gmapkernel/: CMakeLists.txt  chrono.hh
src/lib-gmapkernel/g-map/: attribute.cc  attribute.hh  coverage.cc  coverage.hh  dart.cc  dart.hh  dart.incc  embedding.cc  embedding.hh  g-map-basic.cc  g-map-basic.hh  g-map-basic.icc  g-map-basic.incc  g-map.cc  g-map.hh
src/lib-gmapkernel/g-map-vertex/: attribute-vertex.cc  attribute-vertex.hh  dart-vertex.cc  dart-vertex.hh  dart-vertex.incc  g-map-vertex.hh  gmv-assimp.cc  gmv-inline.cc  gmv-off.cc  gmv-save.cc  mesh-diver.cc  mesh-diver.hh
src/lib-gmapkernel/tools/geometry/: geometry.cc  geometry.hh  geometry.incc  multivector.cc  multivector.hh  plane.hh  transformation-matrix.hh  vector.hh  vertex.cc  vertex.hh
src/lib-gmapkernel/tools/streams/: streams.cc  streams.hh  streams.icc  streams.incc
src/lib-homology/: compute-homology.cc
src/lib-homology/matrices-pmq/: Matrice.cc
src/lib-rounding/: rounding-vertex.cc
src/mokaQtIhm/: CMakeLists.txt  main.cc
src/mokaQtIhm/object-creations/: creation-boutons.qt.cc  creation-options.qt.cc
src/mokaQtIhm/object-operations/: operation-chanfreinage.qt.cc
src/mokaQtIhm/object-options/: options-carac.qt.cc  options-carac.qt.hh  options-couleurs.qt.cc  options-frame.qt.cc  options-surfacic-homology.qt.cc  options-surfacic-homology.qt.hh  options-volumic-homology.qt.cc  options-volumic-homology.qt.hh
src/mokaQtIhm/utils/: floatSpinBox.qt.cc
src/mokaQtIhm/windows/: gl-multi-window.qt.cc  gl-window.qt.cc  gl-window.qt.hh  menu-bar.qt.cc  window.qt.cc  window.qt.hh
